--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,15 +6,18 @@
   "python.formatting.provider": "yapf",
   "python.formatting.yapfPath": "yapf",
   "python.formatting.yapfArgs": ["--style", "${workspaceRoot}/setup.cfg"],
-  "cSpell.words": ["isort", "pylint", "yapf", "pytest", "instafail", "AGRC"],
+  "cSpell.words": [
+    "AGRC",
+    "GUNNISON",
+    "UICLSID",
+    "instafail",
+    "isort",
+    "jsonify",
+    "pylint",
+    "pytest",
+    "yapf"
+  ],
   "editor.formatOnSave": true,
   "editor.rulers": [120],
-  "files.insertFinalNewline": true,
-  "coverage-gutters.showGutterCoverage": true,
-  "coverage-gutters.showLineCoverage": true,
-  "coverage-gutters.showRulerCoverage": false,
-  "coverage-gutters.highlightdark": "rgb(61, 153, 112, .05)",
-  "coverage-gutters.noHighlightDark": "rgb(255, 65, 54, .05)",
-  "coverage-gutters.partialHighlightDark": "rgb(255, 133, 27, .05)",
-  "python.pythonPath": "/Users/stdavis/.pyenv/versions/masquerade/bin/python"
+  "files.insertFinalNewline": true
 }
