--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,8 @@
   ],
   "editor.formatOnSave": true,
   "editor.rulers": [120],
-  "files.insertFinalNewline": true
+  "files.insertFinalNewline": true,
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": true
+  }
 }
