--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,6 +2,11 @@ name: Test and Deploy
 
 on: [push, pull_request]
 
+env:
+  python-version: 3.8
+  SERVICE_NAME: masquerade
+  IMAGE: gcr.io/${{ secrets.PROJECT_ID }}/masquerade
+
 jobs:
   test:
     name: Test
@@ -11,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: ${{ env.python-version }}
 
     - name: Checkout
       uses: actions/checkout@v2
@@ -28,63 +33,46 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./cov.xml
 
-  deploy:
-    name: Deploy
+  deploy-staging:
+    name: Deploy to Staging
     runs-on: ubuntu-latest
     needs: test
-    if: contains('refs/heads/main refs/heads/staging', github.ref)
-    env:
-      RUN_REGION: us-central1
-      SERVICE_NAME: masquerade
+    environment:
+      name: Staging
+    if: github.ref == 'refs/heads/staging'
 
     steps:
-    - name: Get Variables
-      id: variables
-      shell: bash
-      run: |
-        REF=${{ github.ref }}
-        BRANCH=${REF##*/}
-        echo "current branch: $BRANCH"
-        if [[ "$BRANCH" == "main" ]]; then
-          SA_KEY='${{ secrets.RUN_SA_KEY_PROD }}'
-          PROJECT_ID='${{ secrets.RUN_PROJECT_ID_PROD }}'
-        else
-          SA_KEY='${{ secrets.RUN_SA_KEY_STAGING }}'
-          PROJECT_ID='${{ secrets.RUN_PROJECT_ID_STAGING }}'
-        fi
-        echo "::set-output name=sa_key::$SA_KEY"
-        echo "::set-output name=project_id::$PROJECT_ID"
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.python-version }}
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Checkout
-      uses: actions/checkout@v2
+      - uses: google-github-actions/setup-gcloud@master
+        with:
+          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+          project_id: ${{ secrets.PROJECT_ID }}
 
-    - name: Set Up GCP
-      uses: google-github-actions/setup-gcloud@master
-      with:
-        version: '290.0.1'
-        service_account_key: ${{ steps.variables.outputs.sa_key }}
-        project_id: ${{ steps.variables.outputs.project_id }}
+      - run: |-
+          gcloud --quiet auth configure-docker
 
-    - name: Build
-      run: |-
-        gcloud builds submit \
-          --quiet \
-          --tag "gcr.io/${{ steps.variables.outputs.project_id }}/$SERVICE_NAME:$GITHUB_SHA" \
-          --project=${{ steps.variables.outputs.project_id }}
+      - name: Build Image
+        run: |-
+          docker build \
+            -t "$IMAGE:$GITHUB_SHA" \
+            -t "$IMAGE:latest" \
+            .
 
-    - name: Deploy
-      run: |-
-        gcloud run deploy "$SERVICE_NAME" \
-          --quiet \
-          --region "$RUN_REGION" \
-          --image "gcr.io/${{ steps.variables.outputs.project_id }}/$SERVICE_NAME:$GITHUB_SHA" \
-          --platform "managed" \
-          --port 8000 \
-          --update-env-vars WEB_API_KEY=${{ secrets.WEB_API_KEY }} \
-          --project=${{ steps.variables.outputs.project_id }} \
-          --allow-unauthenticated
+      - name: Publish Image
+        run: |-
+          docker push "$IMAGE" -a
+
+      - name: Deploy
+        run: |-
+          gcloud run deploy "$SERVICE_NAME" \
+            --quiet \
+            --platform "managed" \
+            --region "us-central1" \
+            --image "$IMAGE:latest"
