--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -76,3 +76,47 @@ jobs:
             --platform "managed" \
             --region "us-central1" \
             --image "$IMAGE:latest"
+
+  deploy-prod:
+    name: Deploy to Production
+    runs-on: ubuntu-latest
+    needs: test
+    environment:
+      name: Production
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.python-version }}
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: google-github-actions/setup-gcloud@master
+        with:
+          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+          project_id: ${{ secrets.PROJECT_ID }}
+
+      - run: |-
+          gcloud --quiet auth configure-docker
+
+      - name: Build Image
+        run: |-
+          docker build \
+            -t "$IMAGE:$GITHUB_SHA" \
+            -t "$IMAGE:latest" \
+            .
+
+      - name: Publish Image
+        run: |-
+          docker push "$IMAGE" -a
+
+      - name: Deploy
+        run: |-
+          gcloud run deploy "$SERVICE_NAME" \
+            --quiet \
+            --platform "managed" \
+            --region "us-central1" \
+            --image "$IMAGE:latest"
