chore: switch to dotenv for local dev
This works better with VSCode launch configurations.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,11 +8,9 @@
   "python.formatting.yapfArgs": ["--style", "${workspaceRoot}/setup.cfg"],
   "cSpell.words": [
     "AGRC",
-    "GUNNISON",
-    "Referer",
-    "UICLSID",
     "atch",
     "codecov",
+    "dotenv",
     "getenv",
     "gnis",
     "ilike",
