--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,9 +2,23 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Python: Flask",
+      "type": "python",
+      "request": "launch",
+      "module": "flask",
+      "args": [
+        "run",
+        "--no-debugger",
+        "--cert=cert.pem",
+        "--key=key.pem",
+        "--host=0.0.0.0"
+      ],
+      "jinja": true
+    },
+    {
       "name": "Debug Tests",
       "type": "python",
-      "request": "test",
+      "request": "launch",
       "console": "integratedTerminal",
       "env": {
         "PYTEST_ADDOPTS": "--no-cov"
