--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "dotenv",
     "getenv",
     "gnis",
+    "GUNNISON",
     "ilike",
     "instafail",
     "isort",
@@ -23,6 +24,8 @@
     "psycopg",
     "pylint",
     "pytest",
+    "Referer",
+    "UICLSID",
     "usaddress",
     "yapf",
     "ython"
@@ -35,5 +38,6 @@
   },
   "python.testing.unittestEnabled": false,
   "python.testing.nosetestsEnabled": false,
-  "python.testing.pytestEnabled": true
+  "python.testing.pytestEnabled": true,
+  "python.testing.pytestArgs": ["tests"]
 }
