--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,6 +6,7 @@ env:
   python-version: 3.8
   SERVICE_NAME: masquerade
   IMAGE: gcr.io/${{ secrets.PROJECT_ID }}/masquerade
+  REGION: us-central1
 
 jobs:
   test:
@@ -33,13 +34,16 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./cov.xml
 
-  deploy-staging:
-    name: Deploy to Staging
+  deploy-dev:
+    name: Deploy to Dev
     runs-on: ubuntu-latest
     needs: test
     environment:
-      name: Staging
-    if: github.ref == 'refs/heads/staging'
+      name: dev
+    if: github.ref == 'refs/heads/dev'
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
       - name: Set up Python
@@ -50,13 +54,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: google-github-actions/setup-gcloud@master
+      - id: auth
+        name: 🗝️ Authenticate to Google Cloud
+        uses: google-github-actions/auth@v0.4.4
         with:
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-          project_id: ${{ secrets.PROJECT_ID }}
+          create_credentials_file: true
+          token_format: access_token
+          workload_identity_provider: ${{ secrets.IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
 
-      - run: |-
-          gcloud --quiet auth configure-docker
+      - name: 🐳 Setup docker
+        uses: docker/login-action@v1
+        with:
+          registry: gcr.io
+          username: oauth2accesstoken
+          password: ${{ steps.auth.outputs.access_token }}
 
       - name: Build Image
         run: |-
@@ -69,22 +81,25 @@ jobs:
         run: |-
           docker push "$IMAGE" -a
 
-      - name: Deploy
-        run: |-
-          gcloud run deploy "$SERVICE_NAME" \
-            --quiet \
-            --platform "managed" \
-            --region "us-central1" \
-            --image "$IMAGE:latest" \
-            --set-env-vars WEB_API_KEY=${{ secrets.WEB_API_KEY }}
+      - name: 🚀 Deploy to Cloud Run
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@v0.7.0
+        with:
+          service: ${{ env.SERVICE_NAME }}
+          image: gcr.io/${{ secrets.PROJECT_ID }}/${{ env.IMAGE }}:latest
+          region: ${{ env.REGION }}
+          env-vars: WEB_API_KEY=${{ secrets.WEB_API_KEY }}
 
   deploy-prod:
     name: Deploy to Production
     runs-on: ubuntu-latest
     needs: test
     environment:
-      name: Production
+      name: prod
     if: github.ref == 'refs/heads/main'
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
       - name: Set up Python
@@ -95,13 +110,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: google-github-actions/setup-gcloud@master
+      - id: auth
+        name: 🗝️ Authenticate to Google Cloud
+        uses: google-github-actions/auth@v0.4.4
         with:
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-          project_id: ${{ secrets.PROJECT_ID }}
+          create_credentials_file: true
+          token_format: access_token
+          workload_identity_provider: ${{ secrets.IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
 
-      - run: |-
-          gcloud --quiet auth configure-docker
+      - name: 🐳 Setup docker
+        uses: docker/login-action@v1
+        with:
+          registry: gcr.io
+          username: oauth2accesstoken
+          password: ${{ steps.auth.outputs.access_token }}
 
       - name: Build Image
         run: |-
@@ -114,11 +137,11 @@ jobs:
         run: |-
           docker push "$IMAGE" -a
 
-      - name: Deploy
-        run: |-
-          gcloud run deploy "$SERVICE_NAME" \
-            --quiet \
-            --platform "managed" \
-            --region "us-central1" \
-            --image "$IMAGE:latest" \
-            --set-env-vars WEB_API_KEY=${{ secrets.WEB_API_KEY }}
+      - name: 🚀 Deploy to Cloud Run
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@v0.7.0
+        with:
+          service: ${{ env.SERVICE_NAME }}
+          image: gcr.io/${{ secrets.PROJECT_ID }}/${{ env.IMAGE }}:latest
+          region: ${{ env.REGION }}
+          env-vars: WEB_API_KEY=${{ secrets.WEB_API_KEY }}
