docs: make CA install instructions more clear

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,10 @@
   "python.formatting.yapfPath": "yapf",
   "python.formatting.yapfArgs": ["--style", "${workspaceRoot}/setup.cfg"],
   "cSpell.words": [
-    "oauth2accesstoken",
     "AGRC",
     "atch",
+    "CAROOT",
+    "choco",
     "codecov",
     "dotenv",
     "getenv",
@@ -22,12 +23,14 @@
     "jsonpify",
     "mkcert",
     "nort",
+    "oauth2accesstoken",
     "psycopg",
     "pylint",
     "pytest",
     "Referer",
     "UICLSID",
     "usaddress",
+    "venv",
     "yapf",
     "ython"
   ],
