--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,7 +3,7 @@ name: Test and Deploy
 on: [push, pull_request]
 
 env:
-  python-version: 3.10
+  python-version: "3.10"
   SERVICE_NAME: masquerade
   IMAGE: gcr.io/${{ secrets.PROJECT_ID }}/masquerade
   REGION: us-central1
