wip: begin to implement vscode remote container development
TODO:
- [ ] figure out how to expose port 5000
- [ ] fix gpg commit signing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,9 +13,11 @@
     "ADDSYSTEM",
     "AGRC",
     "atch",
+    "azuretools",
     "CAROOT",
     "choco",
     "codecov",
+    "devcontainer",
     "dotenv",
     "FULLADD",
     "geocoder",
@@ -34,6 +36,7 @@
     "oauth2accesstoken",
     "opensgid",
     "psycopg",
+    "pylance",
     "pylint",
     "pytest",
     "Referer",
