--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -83,12 +83,16 @@ jobs:
 
       - name: 🚀 Deploy to Cloud Run
         id: deploy
-        uses: google-github-actions/deploy-cloudrun@v0.7.0
+        uses: google-github-actions/deploy-cloudrun@v0.10.1
         with:
           service: ${{ env.SERVICE_NAME }}
           image: ${{ env.IMAGE }}:latest
           region: ${{ env.REGION }}
           env_vars: WEB_API_KEY=${{ secrets.WEB_API_KEY }}
+          flags: |
+            --min-instances=0
+            --memory=256Mi
+            --cpu=1
 
   deploy-prod:
     name: Deploy to Production
@@ -139,9 +143,15 @@ jobs:
 
       - name: 🚀 Deploy to Cloud Run
         id: deploy
-        uses: google-github-actions/deploy-cloudrun@v0.7.0
+        uses: google-github-actions/deploy-cloudrun@v0.10.1
         with:
           service: ${{ env.SERVICE_NAME }}
           image: ${{ env.IMAGE }}:latest
           region: ${{ env.REGION }}
           env_vars: WEB_API_KEY=${{ secrets.WEB_API_KEY }}
+          flags: |
+            --min-instances=1
+            --max-instances=10
+            --concurrency=100
+            --memory=256Mi
+            --cpu=1
