--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,31 +8,35 @@ env:
   IMAGE: gcr.io/${{ secrets.PROJECT_ID }}/masquerade
   REGION: us-central1
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ env.python-version }}
 
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: ⬇️ Checkout code
+        uses: actions/checkout@v3
 
-      - name: Install project
+      - name: 📥 Install project
         run: pip install -e .[tests]
 
-      - name: Test with pytest
+      - name: 🧪 Test with pytest
         run: pytest
 
-      - name: Report coverage to Codecov
-        uses: codecov/codecov-action@v1
+      - name: 📞 Report coverage to Codecov
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./cov.xml
+          files: ./cov.xml
 
   deploy-dev:
     name: Deploy to Dev
@@ -41,45 +45,56 @@ jobs:
     environment:
       name: dev
     if: github.ref == 'refs/heads/dev'
-    permissions:
-      id-token: write
-      contents: read
 
     steps:
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ env.python-version }}
 
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: ⬇️ Checkout code
+        uses: actions/checkout@v3
 
       - id: auth
         name: 🗝️ Authenticate to Google Cloud
-        uses: google-github-actions/auth@v0.4.4
+        uses: google-github-actions/auth@v0
         with:
           create_credentials_file: true
           token_format: access_token
           workload_identity_provider: ${{ secrets.IDENTITY_PROVIDER }}
           service_account: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
 
-      - name: 🐳 Setup docker
-        uses: docker/login-action@v1
+      - name: 🐳 Set up Docker Buildx
+        id: builder
+        uses: docker/setup-buildx-action@v2
+
+      - name: 🗝️ Authenticate Docker to Google CLoud
+        uses: docker/login-action@v2
         with:
           registry: gcr.io
           username: oauth2accesstoken
           password: ${{ steps.auth.outputs.access_token }}
 
-      - name: Build Image
-        run: |-
-          docker build \
-            -t "$IMAGE:$GITHUB_SHA" \
-            -t "$IMAGE:latest" \
-            .
+      - name: 🏷️ Extract tags from GitHub
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: gcr.io/${{ secrets.PROJECT_ID }}/app
+          tags: |
+            type=ref,suffix=-{{sha}},event=branch
+            type=ref,prefix=pr-,suffix=-{{sha}},event=pr
+            type=semver,pattern={{version}}
+            latest
 
-      - name: Publish Image
-        run: |-
-          docker push "$IMAGE" -a
+      - name: 📦 Build and push image
+        uses: docker/build-push-action@v3
+        with:
+          builder: ${{ steps.builder.outputs.name }}
+          tags: ${{ steps.meta.outputs.tags }}
+          context: .
+          push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: 🚀 Deploy to Cloud Run
         id: deploy
@@ -103,45 +118,56 @@ jobs:
     environment:
       name: prod
     if: github.ref == 'refs/heads/main'
-    permissions:
-      id-token: write
-      contents: read
 
     steps:
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ env.python-version }}
 
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: ⬇️ Checkout code
+        uses: actions/checkout@v3
 
       - id: auth
         name: 🗝️ Authenticate to Google Cloud
-        uses: google-github-actions/auth@v0.4.4
+        uses: google-github-actions/auth@v0
         with:
           create_credentials_file: true
           token_format: access_token
           workload_identity_provider: ${{ secrets.IDENTITY_PROVIDER }}
           service_account: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
 
-      - name: 🐳 Setup docker
-        uses: docker/login-action@v1
+      - name: 🐳 Set up Docker Buildx
+        id: builder
+        uses: docker/setup-buildx-action@v2
+
+      - name: 🗝️ Authenticate Docker to Google CLoud
+        uses: docker/login-action@v2
         with:
           registry: gcr.io
           username: oauth2accesstoken
           password: ${{ steps.auth.outputs.access_token }}
 
-      - name: Build Image
-        run: |-
-          docker build \
-            -t "$IMAGE:$GITHUB_SHA" \
-            -t "$IMAGE:latest" \
-            .
+      - name: 🏷️ Extract tags from GitHub
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: gcr.io/${{ secrets.PROJECT_ID }}/app
+          tags: |
+            type=ref,suffix=-{{sha}},event=branch
+            type=ref,prefix=pr-,suffix=-{{sha}},event=pr
+            type=semver,pattern={{version}}
+            latest
 
-      - name: Publish Image
-        run: |-
-          docker push "$IMAGE" -a
+      - name: 📦 Build and push image
+        uses: docker/build-push-action@v3
+        with:
+          builder: ${{ steps.builder.outputs.name }}
+          tags: ${{ steps.meta.outputs.tags }}
+          context: .
+          push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: 🚀 Deploy to Cloud Run
         id: deploy
