--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -28,6 +28,7 @@ jobs:
         id: release-please
         uses: agrc/release-composite-action@v1
         with:
+          release-type: python
           prerelease: ${{ github.ref_name == 'dev' }}
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           github-app-id: ${{ secrets.UGRC_RELEASE_BOT_APP_ID }}
