--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -45,6 +45,9 @@ jobs:
     if: github.ref_name == 'dev' && needs.release.outputs.release_created
 
     steps:
+      - name: ⬇️ Checkout code
+        uses: actions/checkout@v3
+
       - name: 🚢 Deploy
         uses: ./github/actions/deploy
         with:
@@ -68,6 +71,9 @@ jobs:
     if: github.ref_name == 'main' && needs.release.outputs.release_created
 
     steps:
+      - name: ⬇️ Checkout code
+        uses: actions/checkout@v3
+
       - name: 🚢 Deploy
         uses: ./github/actions/deploy
         with:
