--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: 🚢 Deploy
-        uses: ./github/actions/deploy
+        uses: ./.github/actions/deploy
         with:
           web-api-key: ${{ secrets.WEB_API_KEY }}
           identity-provider: ${{ secrets.IDENTITY_PROVIDER }}
@@ -75,7 +75,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: 🚢 Deploy
-        uses: ./github/actions/deploy
+        uses: ./.github/actions/deploy
         with:
           web-api-key: ${{ secrets.WEB_API_KEY }}
           identity-provider: ${{ secrets.IDENTITY_PROVIDER }}
