fix: add service now creds to deploy action

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -87,3 +87,8 @@ jobs:
             --min-instances=1
             --timeout=60
           env-vars: WEB_API_KEY=${{ secrets.WEB_API_KEY }}
+          service-now-instance: ${{ secrets.SN_INSTANCE }}
+          service-now-table: ${{ secrets.SN_TABLE }}
+          service-now-system-id: ${{ secrets.SN_SYS_ID }}
+          service-now-username: ${{ secrets.SN_USERNAME }}
+          service-now-password: ${{ secrets.SN_PASSWORD }}
