fix: gracefully handle 404s from web api
Closes #98

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,12 +13,14 @@
     "ADDSYSTEM",
     "AGRC",
     "atch",
+    "backoff",
     "Buildx",
     "CAROOT",
     "choco",
     "cloudrun",
     "codecov",
     "dotenv",
+    "forcelist",
     "FULLADD",
     "geocoder",
     "geosearch",
