--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,7 @@
   "python.linting.pylintEnabled": true,
   "python.linting.flake8Enabled": false,
   "python.linting.pycodestyleEnabled": false,
-  "python.formatting.provider": "yapf",
-  "python.formatting.yapfPath": "yapf",
-  "python.formatting.yapfArgs": [
-    "--style",
-    "${workspaceRoot}/setup.cfg"
-  ],
+  "python.formatting.provider": "black",
   "cSpell.words": [
     "ADDSYSTEM",
     "AGRC",
@@ -45,7 +40,6 @@
     "UICLSID",
     "usaddress",
     "venv",
-    "yapf",
     "ython"
   ],
   "editor.formatOnSave": true,
@@ -61,5 +55,8 @@
   "python.testing.pytestEnabled": true,
   "python.testing.pytestArgs": [
     "tests"
-  ]
+  ],
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  }
 }
