--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,11 @@
-[tool.isort]
-profile = "black"
-[tool.pylint.format]
-max-line-length = 120
-disable = "broad-except"
-ignore-patterns = "test_.*?py"
-generated-members = "arcpy.da.SearchCursor,arcpy.da.UpdateCursor,arcpy.da.Describe,arcpy.env.scratchFolder,arcpy.env.scratchGDB"
+[tool.ruff]
+line-length = 120
+ignore = ["E501"]
+[tool.black]
+line-length = 120
 [tool.pytest.ini_options]
-testpaths = "tests src"
-norecursedirs = ".env data maps"
-show_capture = "True"
-minversion = 3.5
+minversion = "6.0"
+testpaths = ["tests", "src"]
+norecursedirs = [".env", "data", "maps", ".github", ".vscode"]
 console_output_style = "count"
-addopts = "--pylint --cov-branch --cov=masquerade --cov-report term --cov-report xml:cov.xml --instafail --isort"
+addopts = "--ruff --cov-branch --cov=masquerade --cov-report term --cov-report xml:cov.xml --instafail"
