Apply suggestions from code review

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: ⬇️ Checkout code
         uses: actions/checkout@v4
+        with:
+          show-progress: false
 
       - name: 📥 Install project
         run: pip install -e .[tests]
