--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,7 @@ updates:
     commit-message:
       prefix: deps
       prefix-development: deps(dev)
+    versioning-strategy: increase
   - package-ecosystem: github-actions
     directory: /
     schedule:
