--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 9-17/2 * * 1-5"
   workflow_dispatch:
 
+permissions:
+  issues: write
+
 jobs:
   reminder:
     name: Look for past due reminders and notify
