--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
     "isort",
     "jsonify",
     "jsonpify",
+    "Lehi",
     "mkcert",
     "nort",
     "oauth2accesstoken",
@@ -46,13 +47,9 @@
   ],
   "files.insertFinalNewline": true,
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true
+    "source.organizeImports": "explicit"
   },
-  "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
-  "python.testing.pytestArgs": [
-    "tests"
-  ],
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter"
   }
