--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ ignore = ["E501"]
 line-length = 120
 [tool.pytest.ini_options]
 minversion = "6.0"
-testpaths = ["tests", "src"]
+testpaths = ["tests"]
 norecursedirs = [".env", "data", "maps", ".github", ".vscode"]
 console_output_style = "count"
 addopts = "--ruff --cov-branch --cov=masquerade --cov-report term --cov-report xml:cov.xml --instafail"
