--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -36,25 +36,25 @@ runs:
 
     - name: 🐳 Set up Docker Buildx
       id: builder
-      uses: docker/setup-buildx-action@v2
-
-    - name: 🗝️ Authenticate Docker to Google CLoud
-      uses: docker/login-action@v2
-      with:
-        registry: gcr.io
-        username: oauth2accesstoken
-        password: ${{ steps.auth.outputs.access_token }}
+      uses: docker/setup-buildx-action@v3
 
     - name: 🏷️ Extract tags from GitHub
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: gcr.io/${{ inputs.project-id }}/app
+        images: us-central1-docker.pkg.dev/${{ secrets.PROJECT_ID }}/images/app
         tags: |
           type=ref,suffix=-{{sha}},event=branch
           type=ref,prefix=pr-,suffix=-{{sha}},event=pr
           type=semver,pattern={{version}}
-          latest
+          type=raw,value=latest
+
+    - name: 🗝️ Authenticate Docker to Google Cloud
+      uses: docker/login-action@v3
+      with:
+        registry: us-central1-docker.pkg.dev
+        username: oauth2accesstoken
+        password: ${{ steps.auth.outputs.access_token }}
 
     - name: 📦 Build and push image
       uses: docker/build-push-action@v5
@@ -65,13 +65,20 @@ runs:
         push: true
         cache-from: type=gha
         cache-to: type=gha,mode=max
+        provenance: false
+
+    - name: 🔍️ Set image name
+      shell: bash
+      run: |
+        IMAGE_ID=$(echo $DOCKER_METADATA_OUTPUT_TAGS | cut -d ' ' -f 1)
+        echo "IMAGE_ID=$IMAGE_ID" >> $GITHUB_ENV
 
     - name: 🚀 Deploy to Cloud Run
       id: deploy
       uses: google-github-actions/deploy-cloudrun@v2
       with:
         service: masquerade
-        image: gcr.io/${{ inputs.project-id }}/masquerade:latest
+        image: ${{ env.IMAGE_ID }}
         region: us-central1
         env_vars: WEB_API_KEY=${{ inputs.web-api-key }}
         flags: ${{ inputs.deploy-flags }}
