fix: remove ruff pytest plugin and run separately

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -30,6 +30,9 @@ jobs:
       - name: 📥 Install project
         run: pip install -e .[tests]
 
+      - name: 🧶 Lint
+        run: ruff check --output-format=github .
+
       - name: 🧪 Test with pytest
         run: pytest
 
