--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,4 @@ minversion = "6.0"
 testpaths = ["tests"]
 norecursedirs = [".env", "data", "maps", ".github", ".vscode"]
 console_output_style = "count"
-addopts = "--ruff --cov-branch --cov=masquerade --cov-report term --cov-report xml:cov.xml --instafail"
+addopts = "--cov-branch --cov=masquerade --cov-report term --cov-report xml:cov.xml --instafail"
