chore: upgrade key value format for dockerfile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
     "Geospatial",
     "getenv",
     "gnis",
+    "gunicorn",
     "GUNNISON",
     "Holladay",
     "ilike",
@@ -29,6 +30,7 @@
     "isort",
     "jsonify",
     "jsonpify",
+    "Knative",
     "Lehi",
     "mkcert",
     "nort",
@@ -37,6 +39,7 @@
     "psycopg",
     "pylint",
     "pytest",
+    "PYTHONUNBUFFERED",
     "Referer",
     "simplejson",
     "STREETNAME",
