--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,11 +13,13 @@
     "charliermarsh",
     "choco",
     "cloudrun",
+    "Cntry",
     "codecov",
     "dotenv",
     "forcelist",
     "FULLADD",
     "geocoder",
+    "geocodes",
     "geosearch",
     "Geospatial",
     "getenv",
@@ -32,6 +34,7 @@
     "jsonpify",
     "Knative",
     "Lehi",
+    "makepoint",
     "mkcert",
     "nort",
     "oauth2accesstoken",
@@ -41,6 +44,8 @@
     "pytest",
     "PYTHONUNBUFFERED",
     "Referer",
+    "ryanluker",
+    "setsrid",
     "simplejson",
     "STREETNAME",
     "UGRC",
