--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,11 +12,13 @@
         "editorconfig.editorconfig",
         "ms-azuretools.vscode-docker",
         "ms-python.python",
-        "streetsidesoftware.code-spell-checker"
+        "streetsidesoftware.code-spell-checker",
+        "ryanluker.vscode-coverage-gutters"
       ],
       "python": {
         "defaultInterpreterPath": "/usr/local/bin/python"
       }
     }
-  }
+  },
+  "postCreateCommand": "pip install -e .[tests]"
 }
