--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,5 +61,7 @@
   "editor.rulers": [120],
   "files.insertFinalNewline": true,
   "python.testing.pytestArgs": ["--no-cov"],
-  "python.testing.pytestEnabled": true
+  "python.testing.pytestEnabled": true,
+  "coverage-gutters.showGutterCoverage": false,
+  "coverage-gutters.showLineCoverage": true
 }
