deps: python 3.10 -> 3.12 and other bumps
remove black

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
   },
   "cSpell.words": [
     "ADDNUM",
+    "addopts",
     "ADDSYSTEM",
     "AGRC",
     "atch",
@@ -35,7 +36,9 @@
     "Knative",
     "Lehi",
     "makepoint",
+    "minversion",
     "mkcert",
+    "norecursedirs",
     "nort",
     "oauth2accesstoken",
     "opensgid",
@@ -48,6 +51,7 @@
     "setsrid",
     "simplejson",
     "STREETNAME",
+    "testpaths",
     "UGRC",
     "UICLSID",
     "usaddress",
