chore: tell dev container to use the host network
This fixes an issue preventing this service from being tested on a virtual machine running on the dev machine.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,5 +20,6 @@
       }
     }
   },
-  "postCreateCommand": "pip install -e .[tests]"
+  "postCreateCommand": "pip install -e .[tests]",
+  "runArgs": ["--network=host"]
 }
