--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,17 +6,27 @@ updates:
       interval: monthly
     groups:
       safe-dependencies:
-        update-types: ['minor', 'patch']
+        update-types:
+          - minor
+          - patch
       major-dependencies:
-        update-types: [major]
+        update-types:
+          - major
     commit-message:
       prefix: deps
       prefix-development: deps(dev)
     versioning-strategy: increase
+    cooldown:
+      default-days: 10
+      semver-major-days: 60
+      semver-minor-days: 14
+      semver-patch-days: 7
   - package-ecosystem: github-actions
     directory: /
     schedule:
       interval: monthly
     groups:
       ci-dependencies:
-        dependency-type: 'production'
+        dependency-type: production
+    cooldown:
+      default-days: 10
